# api/internal/gen/api/api.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1-0.20250725172202-702cc9178842 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
 //
 // From https://github.com/oapi-codegen/oapi-codegen/blob/main/pkg/codegen/templates/imports.tmpl
 // Changes:
@@ -63,8 +63,6 @@ func (w *ServerInterfaceWrapper) FortniteGetStats(ctx echo.Context) error {
 	if err != nil {
 		return httperror.NewValidationErrorWithLoc("timeWindow", "missing or invalid value", "path")
 	}
-
-	ctx.Set(ApiKeyAuthScopes, []string{})
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.FortniteGetStats(ctx, username, platform, timeWindow)
